changed name of page+beginning 3rd

--- a/app/test_folder/test_notebook.ipynb
+++ b/app/test_folder/test_notebook.ipynb
@@ -5193,6 +5193,32 @@
     "        print(res_var,\" : \",res_dict2[i][res_var]['value'])\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from geopy.distance import geodesic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "866.4554329098685\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(geodesic((41.49008, -71.312796),(41.499498, -81.695391)).kilometers)"
+   ]
   }
  ],
  "metadata": {
