--- a/app/test_folder/test_notebook.ipynb
+++ b/app/test_folder/test_notebook.ipynb
@@ -5205,19 +5205,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "866.4554329098685\n"
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "print(geodesic((41.49008, -71.312796),(41.499498, -81.695391)).kilometers)"
+    "print(geodesic((41.49008, -71.312796),(41.49008, -71.312796)).kilometers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import haversine_distances\n",
+    "from math import radians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = [[-34.83333, -58.5166646],[49.0083899664, 2.53844117956],[47, 5.423]]\n",
+    "lat_list = [-34.83,49.008,47.13]\n",
+    "lon_list = [-58.51, 2.54, 5.423]\n",
+    "lat_list2 = [34.83,-49.008,-47.13]\n",
+    "lon_list2 = [58.51, -2.54, -5.423]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def haversine_np(lon1, lat1, lon2, lat2):\n",
+    "    \"\"\"\n",
+    "    Calculate the great circle distance between two points\n",
+    "    on the earth (specified in decimal degrees)\n",
+    "\n",
+    "    All args must be of equal length.    \n",
+    "\n",
+    "    \"\"\"\n",
+    "    lon1, lat1, lon2, lat2 = map(np.radians, [lon1, lat1, lon2, lat2])\n",
+    "\n",
+    "    dlon = lon2 - lon1\n",
+    "    dlat = lat2 - lat1\n",
+    "\n",
+    "    a = np.sin(dlat/2.0)**2 + np.cos(lat1) * np.cos(lat2) * np.sin(dlon/2.0)**2\n",
+    "\n",
+    "    c = 2 * np.arcsin(np.sqrt(a))\n",
+    "    km = 6367 * c\n",
+    "    return km"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans = haversine_np(lon_list[0],lat_list[0],lon_list2,lat_list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14359.67930088 10902.90751929 10527.46009397]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ans)"
    ]
   }
  ],
