haver sol in notebook!

--- a/app/test_folder/test_notebook.ipynb
+++ b/app/test_folder/test_notebook.ipynb
@@ -5303,6 +5303,121 @@
    "source": [
     "print(ans)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2> TIME TO EXPERIMENT BABYYY </h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from haversine import haversine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lyon = (45.7597, 4.8422) # (lat, lon)\n",
+    "paris = (48.8567, 2.3508)\n",
+    "lyon2 = (-45.7597, -4.8422) # (lat, lon)\n",
+    "paris2 = (-48.8567, -2.3508)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst_points = [lyon,paris,lyon2,paris2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ret_mat_dist(pts_list:list) -> np.ndarray:\n",
+    "    m = len(pts_list)\n",
+    "    ans = np.zeros((m,m))\n",
+    "    for i in range(m):\n",
+    "        for j in range(i+1,m):\n",
+    "            ans[i,j] = haversine(pts_list[i],pts_list[j])\n",
+    "\n",
+    "    ans = np.add(ans,np.transpose(ans))\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[    0.           392.21725956 10220.71895222 10543.97208134]\n",
+      " [  392.21725956     0.         10543.97208134 10874.61526378]\n",
+      " [10220.71895222 10543.97208134     0.           392.21725956]\n",
+      " [10543.97208134 10874.61526378   392.21725956     0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ret = ret_mat_dist(lst_points)\n",
+    "print(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple\n",
+    "\n",
+    "def get_max_idx(ar:np.ndarray) -> Tuple[list,float]:\n",
+    "    max_ele_idx = np.where(ar == np.amax(ar))\n",
+    "    dist = ar[max_ele_idx[0][0],max_ele_idx[0][1]]\n",
+    "    idx_list = [max_ele_idx[0][0],max_ele_idx[0][1]]\n",
+    "    return (idx_list,dist)\n",
+    "\n",
+    "\n",
+    "(idx, dist) = get_max_idx(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(48.8567, 2.3508)\n",
+      "(-48.8567, -2.3508)\n",
+      "10874.615263783295\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lst_points[idx[0]])\n",
+    "print(lst_points[idx[1]])\n",
+    "print(dist)"
+   ]
   }
  ],
  "metadata": {
