cleaned up some waste notebooks

--- a/fetcher_api/inaturalist.ipynb
+++ b/fetcher_api/inaturalist.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note : This is one way of fetching inat data, which unfortunately got timed out due to api restrictions. Hence, this is irrelevant right now for our project."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
